fix white space mobile

--- a/styles.css
+++ b/styles.css
@@ -209,7 +209,7 @@ input {
     margin-bottom: 1em;
     margin-top: 0.3em;
     padding: 0.5em;
-    width: 100%;
+    width: 80%;
 }
 
 .popup input:focus {
@@ -625,7 +625,6 @@ progress[value]::-webkit-progress-value {
   }
 }
 
-/*
 @media (min-width: 45em) {
     section {
         flex-basis: 50%;
@@ -643,6 +642,19 @@ progress[value]::-webkit-progress-value {
         flex-basis: 30%;
         max-width: 50%;
         }
+}
+
+
+/*
+input {
+    border-radius: 0.3em;
+    border-style: none;
+    font-family: inherit;
+    font-size: 1em;
+    margin-bottom: 1em;
+    margin-top: 0.3em;
+    padding: 0.5em;
+    width: 100%;
 }
 */
 
